Adding link to online presentation in README

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Presentation about stubs & mocks with RSpec 2 given on "Neubloc talks".
 
+[View the presentation online](http://neubloc.github.com/neubloc-rspec-presentation/ "RSpec presentation online")
+
 Built using showoff (https://github.com/schacon/showoff).
 
 Copyright (c) by Neubloc.
